[package]
name = "age-plugin-yubikey"
description = "[BETA] YubiKey plugin for age."
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/age-plugin-yubikey"
readme = "README.md"
keywords = ["age", "cli", "encryption", "yubikey"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.deb]
extended-description = """\
An age plugin adding support for YubiKeys and other PIV hardware tokens. \
Currently in BETA; we strongly recommend using this with a new YubiKey."""
section = "utils"
assets = [
    ["target/release/age-plugin-yubikey", "usr/bin/", "755"],
    ["target/manpages/age-plugin-yubikey.1.gz", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/age-plugin-yubikey/README.md", "644"],
]

[dependencies]
age-core = "0.5"
age-plugin = "0.0"
base64 = "0.13"
bech32 = "0.8"
console = "0.14"
dialoguer = "0.8"
env_logger = "0.8"
gumdrop = "0.8"
hex = "0.4"
log = "0.4"
p256 = { version = "0.7", features = ["ecdh"] }
rand = "0.7"
secrecy = "0.7"
sha2 = "0.9"
x509 = "0.2"
x509-parser = "0.9"
yubikey-piv = { version = "0.3", features = ["untested"] }

[dev-dependencies]
flate2 = "1"
man = "0.3"

[patch.crates-io]
age-core = { git = "https://github.com/str4d/rage.git", rev = "a9b5e88aa5816b284ebea23fc84d0203a3c4fdbb" }
age-plugin = { git = "https://github.com/str4d/rage.git", rev = "a9b5e88aa5816b284ebea23fc84d0203a3c4fdbb" }
