[package]
name = "age-plugin-yubikey"
description = "YubiKey plugin for age clients"
version = "0.3.3"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/age-plugin-yubikey"
readme = "README.md"
keywords = ["age", "cli", "encryption", "yubikey"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60" # MSRV

[package.metadata.deb]
extended-description = """\
An age plugin adding support for YubiKeys and other PIV hardware tokens."""
section = "utils"
assets = [
    ["target/release/age-plugin-yubikey", "usr/bin/", "755"],
    ["target/manpages/age-plugin-yubikey.1.gz", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/age-plugin-yubikey/README.md", "644"],
]

[dependencies]
age-core = "0.9"
age-plugin = "0.4"
base64 = "0.20"
bech32 = "0.9"
console = { version = "0.15", default-features = false }
dialoguer = { version = "0.10", default-features = false, features = ["password"] }
env_logger = "0.10"
gumdrop = "0.8"
hex = "0.4"
log = "0.4"
p256 = { version = "0.11", features = ["ecdh"] }
pcsc = "2.4"
rand = "0.8"
sha2 = "0.10"
which = "4.1"
x509 = "0.2"
x509-parser = "0.14"
yubikey = { version = "0.7", features = ["untested"] }

# Translations
i18n-embed = { version = "0.13", features = ["desktop-requester", "fluent-system"] }
i18n-embed-fl = "0.6"
lazy_static = "1"
rust-embed = "6"

# GnuPG coexistence
sysinfo = "0.27"

[dev-dependencies]
flate2 = "1"
man = "0.3"
tempfile = "3"
test-with = "0.9"
which = "4"

[patch.crates-io]
yubikey = { git = "https://github.com/iqlusioninc/yubikey.rs.git", rev = "1d33ea174791f699dfc0e6a06648aa3d9e066144" }
